--- a/samp/index.html
+++ b/samp/index.html
@@ -60,14 +60,11 @@
       <div class="row">
         <div class="col-sm-12">
             <img width="170" style="margin-top: 75px;" src="assets/images/6.jpg" alt="Preloader"/>
-            <h1 style="margin-top: 25px;">Немного о<br>SYNDICATE</h1>
-            <h3>Syndicate - это соединение людей с похожим мышлением и стремление к единой цели, пытающаяся спасти индустрии SA-MP и CR-MP от полного закрытия, из за падающего интереса к ним. Мы планируем достичь этой цели с помощью многочисленных RP Ситуаций на проектах данных игр, а также сотрудничества между игроками. Одной идеи должно быть достаточно, чтобы сделать это достойным вашего внимания, но история того, как основатель Ernesto_Supreme строит будующие на борьбе с анархией на крупных RP проектах. Одинаково убедительны.
-
-Мы призываем Вас вступать в наши ряды и вместе поддерживать потенциальный уровень RP на больших проектах, у нас нету иерархии от низших к высшим, наше единое правило - Все равны. 
-Лишь имеются основоположники данного движения, не более.
-Достаточно написать сообщение в группу или действующим представителям руководства, о Вашем желании внести свой вклад в помощь проектам и самому себе.
-<br> И помните... 
-Возможно именно Вы - Светлое будущее нашей любимой игры.</h3>
+            <h1 style="margin-top: 25px;">Немного о<br>SAMP</h1>
+                     <h2></b>
+            Это не просто игра - <br>
+            тут ты сможешь исполнить все свои мечты!
+          </b></h2>
             <div style="margin-top: 50px">
               <a href="https://www.youtube.com/watch?v=u_CbHrBbHNQ" class="btn btn-red">
                 <span class="glyphicon glyphicon-play"></span> ВИДЕОРОЛИК О GTA SA
@@ -83,10 +80,14 @@
     <div class="container" style="margin-top: 10%;">
       <div class="row">
         <div class="col-lg-5 col-lg-offset-7 col-md-5 col-md-offset-7 col-sm-8 col-sm-offset-7">
-          <h2></b>
-            Это не просто игра - <br>
-            тут ты сможешь исполнить все свои мечты!
-          </b></h2>
+           <h1 style="margin-top: 25px;">Немного о<br>SYNDICATE</h1>
+            <h3>Syndicate - это соединение людей с похожим мышлением и стремление к единой цели, пытающаяся спасти индустрии SA-MP и CR-MP от полного закрытия, из за падающего интереса к ним. Мы планируем достичь этой цели с помощью многочисленных RP Ситуаций на проектах данных игр, а также сотрудничества между игроками. Одной идеи должно быть достаточно, чтобы сделать это достойным вашего внимания, но история того, как основатель Ernesto_Supreme строит будующие на борьбе с анархией на крупных RP проектах. Одинаково убедительны.
+
+Мы призываем Вас вступать в наши ряды и вместе поддерживать потенциальный уровень RP на больших проектах, у нас нету иерархии от низших к высшим, наше единое правило - Все равны. 
+Лишь имеются основоположники данного движения, не более.
+Достаточно написать сообщение в группу или действующим представителям руководства, о Вашем желании внести свой вклад в помощь проектам и самому себе.
+<br> И помните... 
+Возможно именно Вы - Светлое будущее нашей любимой игры.</h3>
           <a href="start/ip.html" class="btn btn-red ">НАЧАТЬ ИГРАТЬ</a>
         </div>
       </div>
