--- a/samp/more/more.html
+++ b/samp/more/more.html
@@ -68,7 +68,7 @@
           </h1>
           <p>185.169.134.43:7777
           </p>
-          <a href="../start/index.html" class="btn btn-red">НАЧАТЬ ИГРАТЬ
+          <a href="../start/ip.html" class="btn btn-red">НАЧАТЬ ИГРАТЬ
           </a>
           <br>
         </div>
