--- a/samp/index.html
+++ b/samp/index.html
@@ -39,7 +39,7 @@
             <div class="navbar-collapse collapse" id="bs-navbar">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a class="page-scroll" href="../start/ip.html">Начать игру</a>
+                        <a class="page-scroll" href="start/ip.html">Начать игру</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="more/more.html">Сервера</a>
