--- a/samp/more/more.html
+++ b/samp/more/more.html
@@ -68,8 +68,7 @@
           </h1>
           <p>185.169.134.43:7777
           </p>
-          <a href="../start/ip.html" class="btn btn-red">НАЧАТЬ ИГРАТЬ
-          </a>
+          <a href="../start/ip.html" class="btn btn-red">НАЧАТЬ ИГРАТЬ</a>
           <br>
         </div>
       </div>
